# PicoDVI

software/apps/: CMakeLists.txt
software/apps/mandel-full/: main.c
software/apps/mandel-zoom/: CMakeLists.txt  colors.h  main.c  mandel.c  mandel.h
software/apps/terminal/: main.c
software/include/: common_dvi_pin_configs.h
software/libdvi/: dvi.c
